--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,49 @@
-// body > #ig-root {
-//   display: none;
-// }
+body > #ig-root {
+  display: none;
+}
+
+#kaposcreen_container {
+  .kaposcreen__sentences {
+    font-size: 450%;
+    line-height: 120%;
+    padding: 15px;
+
+    .kaposcreen__sentence {
+      border-bottom: 2px solid #ccc;
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+  }
+
+  .kaposcreen__footer {
+    font-size: 150%;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    padding: 5px 8px;
+
+    progress {
+      background: none !important;
+    }
+    progress.kaposcreen__footer-progress {
+      margin-top: 3px;
+      width: 100%;
+      height: 12px;
+
+      background: auto !important;
+      color: auto !important;
+      box-shadow: auto !important;
+      text-shadow: auto;
+      &::-webkit-progress-bar {
+        border-radius: 12px;
+        background-color: #0066cc;
+        border: 2px solid #0066cc;
+      }
+      &::-webkit-progress-value {
+        background-color: #fff;
+        border-radius: 12px;
+      }
+    }
+  }
+}
